--- a/자율동아리/카드 설명창 CSS.css
+++ b/자율동아리/카드 설명창 CSS.css
@@ -304,10 +304,7 @@ body.on {
 }
 /*main_header 영역 Css*/
 #main {
-    background-color: #888;
-    background-image: linear-gradient(45deg, #444 25%, transparent 25%, transparent 75%, #444 75%, #444), linear-gradient(-45deg, #444 25%, transparent 25%, transparent 75%, #444 75%, #444);
-    background-size: 25px 25px;
-
+    background-color: rgb(155, 152, 152);
 }
 #main_header {
     clear: both;
